--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,107 +1,50 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+@tailwind base;
+@tailwind components;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
 
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+:root{
+  --r-yellow:#E1B168;
+  --deepblack:#21252c;
+  --trans-black:#292e367e;
+  --light-black:#555555;
+  --deeprblack:#343942;
+  --white-text:#DEDEDE;
+  --r-pink:#FFF8F5;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+.tophero-shadow{
+  box-shadow: 0px 16px  16px var(--trans-black);
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+.roundShadow{
+  box-shadow: 0px 0px 3px var(--white-text);
+}
+.ptext{
+  @apply text-sm text-base-text font-josefin font-normal
+}
+:root{
+  @apply text-base md:text-lg text-base-text font-josefin
+}
+.cont{
+  @apply px-3 sm:px-5 md:px-4 lg:px-12
+}
+.removecont{
+  @apply -mx-3 sm:-mx-3 md:-mx-4 lg:-mx-12
+}
+.welcome-text{
+  @apply text-5xl sm:text-6xl md:text-5xl lg:text-[70px] lg:leading-[77.1px]
+}
+.h3text{
+  @apply font-infant text-h1-text text-lg font-[700] mb-1
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+.h4text{
+  @apply font-infant text-deeprblack text-[17px] leading-[26px] mb-1 font-[700]
 }
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.toggler{
+  @apply bg-white-text h-[4px] w-full inline-block
 }
-
-a {
-  color: inherit;
-  text-decoration: none;
+.dots{
+  @apply before:absolute before:-left-[2px] before:-bottom-[2px] before:h-[4px] before:w-[4px] before:rounded-full before:bg-[#c9bfbf] after:absolute after:-right-[2px] after:-bottom-[2px] after:h-[4px] after:w-[4px] after:rounded-full after:bg-[#c9bfbf]
 }
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
+@tailwind utilities;
